Removed unused .gitignore file. Added minimum-stability to composer.json.

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
 			"homepage": "https://github.com/eggnukes"
 		}
 	],
+	"minimum-stability": "dev",
 	"require": {
 		"yiisoft/yii2": "~2.0.0",
 		"bower-asset/moment": "~2.0",
